--- a/FractalGenerator.csproj
+++ b/FractalGenerator.csproj
@@ -61,6 +61,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Segment.cs" />
+    <Compile Include="SierpinskiTriangle.cs" />
+    <Compile Include="Triangle.cs" />
     <EmbeddedResource Include="FractalGenerator.resx">
       <DependentUpon>FractalGenerator.cs</DependentUpon>
       <SubType>Designer</SubType>
