--- a/FractalGenerator.csproj
+++ b/FractalGenerator.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DragonCurve.cs" />
     <Compile Include="Fractal.cs" />
     <Compile Include="FractalDepthTrackBar.cs">
       <SubType>Component</SubType>
